--- a/NewWebServices.html
+++ b/NewWebServices.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="servicesblock">
-                <img src="HIV2.jpeg">
+                <img src="Hiv2.jpeg">
                 <div class="serviceslayer">
 
                  <h1>HIV Services</h1>
