--- a/NewWebabout.html
+++ b/NewWebabout.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="with=device-width, initial-scale=1.0">
-            <title>practice site</title>
+            <title>About</title>
             <link rel="stylesheet" href="NewWeb.css">
         
             <link rel="preconnect" href="https://fonts.gstatic.com">
